# mbed-ce-client-for-azure

./: .gitmodules  .mbedignore  CMakeLists.txt  azure-iot-sdk-c.lib
COMPONENT_AZIOT_OTA/: .mbedignore  CMakeLists.txt  iot-hub-device-update.lib
COMPONENT_AZIOT_UHTTP/: CMakeLists.txt  azure-uhttp-c.lib
copied/c-utility/: consolelogger.cpp
dependencies/: azure-umqtt-c.lib  c-utility.lib  parson.lib
mbed/COMPONENT_AZIOT_OTA/: CMakeLists.txt  mbed_lib.json5
mbed/COMPONENT_AZIOT_OTA/COMPONENT_AZIOT_OTA_PAL_MCUBOOT/: .mbedignore  CMakeLists.txt  mbed_lib.json5
mbed/COMPONENT_AZIOT_OTA/COMPONENT_AZIOT_OTA_PAL_MCUBOOT/mcuboot_patch/: flash_map_backend.cpp  secondary_bd.cpp
mbed/COMPONENT_AZIOT_OTA/COMPONENT_AZIOT_OTA_PAL_MCUBOOT/mcubupdate_handler/: mcubupdate_handler.cpp
mbed/COMPONENT_AZIOT_OTA/COMPONENT_AZIOT_OTA_PAL_MCUBOOT/mcubupdate_handler/aduc/: mcubupdate_handler.hpp
mbed/COMPONENT_AZIOT_OTA/azure-iot-sdk-c_patch/: force_include.h
mbed/COMPONENT_AZIOT_OTA/azure-iot-sdk-c_patch/azureiot/: iothub_client_core_common.h  iothub_device_client_ll.h  iothub_module_client_ll.h
mbed/COMPONENT_AZIOT_OTA/compiler_patch/: strings.h
mbed/COMPONENT_AZIOT_OTA/diagnostics_interface/: diagnostics_interface.c
mbed/COMPONENT_AZIOT_OTA/iot-hub-device-update_patch/adu_workflow/: agent_workflow.cpp
mbed/COMPONENT_AZIOT_OTA/iot-hub-device-update_patch/agent/adu_core_interface/: device_properties.c
mbed/COMPONENT_AZIOT_OTA/iot-hub-device-update_patch/agent/pnp_helper/: pnp_protocol.h
mbed/COMPONENT_AZIOT_OTA/iot-hub-device-update_patch/agent_orchestration/aduc/: agent_orchestration.h
mbed/COMPONENT_AZIOT_OTA/iot-hub-device-update_patch/extensions/extension_manager/: extension_manager.cpp
mbed/COMPONENT_AZIOT_OTA/iot-hub-device-update_patch/extensions/extension_manager/aduc/: extension_manager.hpp
mbed/COMPONENT_AZIOT_OTA/iot-hub-device-update_patch/iothub_communication_manager/: iothub_communication_manager.c
mbed/COMPONENT_AZIOT_OTA/iot-hub-device-update_patch/update_manifest_handlers/steps_handler/: steps_handler.cpp
mbed/COMPONENT_AZIOT_OTA/iot-hub-device-update_patch/utils/c_utils/: string_c_utils.c
mbed/COMPONENT_AZIOT_OTA/iot-hub-device-update_patch/utils/config_utils/: config_utils.c
mbed/COMPONENT_AZIOT_OTA/iot-hub-device-update_patch/utils/crypto_utils/: crypto_lib.c
mbed/COMPONENT_AZIOT_OTA/iot-hub-device-update_patch/utils/d2c_messaging/: d2c_messaging.cpp
mbed/COMPONENT_AZIOT_OTA/iot-hub-device-update_patch/utils/d2c_messaging/aduc/: d2c_messaging.h
mbed/COMPONENT_AZIOT_OTA/iot-hub-device-update_patch/utils/jws_utils/: jws_utils.c
mbed/COMPONENT_AZIOT_OTA/iot-hub-device-update_patch/utils/retry_utils/: retry_utils.c
mbed/COMPONENT_AZIOT_OTA/iot-hub-device-update_patch/utils/retry_utils/aduc/: retry_utils.h
mbed/COMPONENT_AZIOT_OTA/iot-hub-device-update_patch/utils/workflow_utils/: workflow_utils.c
mbed/COMPONENT_AZIOT_OTA/mbed-http/: README.md
mbed/COMPONENT_AZIOT_OTA/mbed-http/source/: http_request_base.h
mbed/COMPONENT_AZIOT_OTA/mbed_platform_layer/: mbed_adu_core_exports.cpp  mbed_adu_core_impl.cpp  mbed_adu_core_impl.hpp  mbed_device_info_exports.cpp
mbed/COMPONENT_AZIOT_OTA/posix_patch/TOOLCHAIN_ARM/: unistd.h
mbed/COMPONENT_AZIOT_OTA/posix_patch/TOOLCHAIN_ARM/sys/: types.h
mbed/COMPONENT_AZIOT_OTA/posix_patch/TOOLCHAIN_GCC_ARM/sys/: wait.h
